[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Tilesets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Torch.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/light.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 112, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 144, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 160, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 176, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 192, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 208, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 150, 16, 25 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 240, 150, 16, 25 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "used",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 2 )

[sub_resource type="Animation" id=12]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 1.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.9 ]
}

[sub_resource type="CircleShape2D" id=13]
radius = 49.8591

[node name="Torch" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 11 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 1, 0.992142 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 1.34
energy = 0.4
range_item_cull_mask = 3
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 12 )

[node name="SlowEnemyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowEnemyArea"]
z_index = -4
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="body_entered" from="SlowEnemyArea" to="." method="_on_SlowEnemyArea_body_entered"]
[connection signal="body_exited" from="SlowEnemyArea" to="." method="_on_SlowEnemyArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
